--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -130,6 +130,22 @@
                 <span class="pet-name">
                   <%= pet.name %>
                 </span>
+                <button data-id="<%= pet._id %>" onclick="openOverlay(this)" class="pet-contact-btn"><svg width="24"
+                    height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#clip0_308_43)">
+                      <path
+                        d="M3 3.5C2.20435 3.5 1.44129 3.81607 0.87868 4.37868C0.316071 4.94129 0 5.70435 0 6.5L0 18.515C0.00396529 19.308 0.321786 20.0673 0.883965 20.6266C1.44615 21.186 2.20694 21.5 3 21.5H11.25C11.4489 21.5 11.6397 21.421 11.7803 21.2803C11.921 21.1397 12 20.9489 12 20.75C12 20.5511 11.921 20.3603 11.7803 20.2197C11.6397 20.079 11.4489 20 11.25 20H3C2.66982 20 2.34884 19.8911 2.08686 19.6902C1.82487 19.4892 1.63652 19.2074 1.551 18.8885L10.011 13.682L12 14.8745L22.5 8.5745V13.25C22.5 13.4489 22.579 13.6397 22.7197 13.7803C22.8603 13.921 23.0511 14 23.25 14C23.4489 14 23.6397 13.921 23.7803 13.7803C23.921 13.6397 24 13.4489 24 13.25V6.5C24 5.70435 23.6839 4.94129 23.1213 4.37868C22.5587 3.81607 21.7956 3.5 21 3.5H3ZM8.562 12.812L1.5 17.1575V8.5745L8.562 12.812ZM1.5 6.8255V6.5C1.5 6.10218 1.65804 5.72064 1.93934 5.43934C2.22064 5.15804 2.60218 5 3 5H21C21.3978 5 21.7794 5.15804 22.0607 5.43934C22.342 5.72064 22.5 6.10218 22.5 6.5V6.8255L12 13.1255L1.5 6.8255Z"
+                        fill="#475AFF" fill-opacity="0.65" />
+                      <path
+                        d="M24 19.25C24 20.6424 23.4469 21.9777 22.4623 22.9623C21.4777 23.9469 20.1424 24.5 18.75 24.5C17.3576 24.5 16.0223 23.9469 15.0377 22.9623C14.0531 21.9777 13.5 20.6424 13.5 19.25C13.5 17.8576 14.0531 16.5223 15.0377 15.5377C16.0223 14.5531 17.3576 14 18.75 14C20.1424 14 21.4777 14.5531 22.4623 15.5377C23.4469 16.5223 24 17.8576 24 19.25ZM18.75 16.25C18.5511 16.25 18.3603 16.329 18.2197 16.4697C18.079 16.6103 18 16.8011 18 17V18.5H16.5C16.3011 18.5 16.1103 18.579 15.9697 18.7197C15.829 18.8603 15.75 19.0511 15.75 19.25C15.75 19.4489 15.829 19.6397 15.9697 19.7803C16.1103 19.921 16.3011 20 16.5 20H18V21.5C18 21.6989 18.079 21.8897 18.2197 22.0303C18.3603 22.171 18.5511 22.25 18.75 22.25C18.9489 22.25 19.1397 22.171 19.2803 22.0303C19.421 21.8897 19.5 21.6989 19.5 21.5V20H21C21.1989 20 21.3897 19.921 21.5303 19.7803C21.671 19.6397 21.75 19.4489 21.75 19.25C21.75 19.0511 21.671 18.8603 21.5303 18.7197C21.3897 18.579 21.1989 18.5 21 18.5H19.5V17C19.5 16.8011 19.421 16.6103 19.2803 16.4697C19.1397 16.329 18.9489 16.25 18.75 16.25Z"
+                        fill="#475AFF" fill-opacity="0.65" />
+                    </g>
+                    <defs>
+                      <clipPath id="clip0_308_43">
+                        <rect width="24" height="24" fill="white" transform="translate(0 0.5)" />
+                      </clipPath>
+                    </defs>
+                  </svg></button>
               </h3>
               <p class="pet-description">
                 <%= pet.description %>
@@ -159,15 +175,30 @@
     <p>&copy; 2023 Fake Adoption Center. All rights reserved.</p>
   </footer>
 
-  <div class="form-overlay">
+  <div class="form-overlay" style="display:none">
     <div class="form-overlay-inner">
       <form class="form-content">
-        <input type="text" id="name" autocomplete="off" class="form-field">
+        <input type="text" placeholder="Name" id="name" autocomplete="off" class="form-field">
+        <input type="text" placeholder="Email Address" id="email" autocomplete="off" class="form-field">
+        <input type="text" placeholder="What is the word for a baby dog?" id="secret" autocomplete="off"
+          class="form-field">
+        <textarea id="comment" class="form-field" placeholder="Comment (optional)"></textarea>
+        <div class="justify-right">
+          <button class="our-btn">Submit</button>
+        </div>
+        <div class="close-form-overlay">x</div>
       </form>
       <div class="form-photo">
-        <p>Thank you for your interest in Barksalot.</p>
+        <img src="/images/fallback.jpg" />
+        <p>Thank you for your interest in <strong>Barksalot</strong></p>
       </div>
-      <div class="thank-you"></div>
+      <div class="thank-you">
+        <p><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
+            class="bi bi-check-circle-fill" viewBox="0 0 16 16">
+            <path
+              d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-3.97-3.03a.75.75 0 0 0-1.08.022L7.477 9.417 5.384 7.323a.75.75 0 0 0-1.06 1.06L6.97 11.03a.75.75 0 0 0 1.079-.02l3.992-4.99a.75.75 0 0 0-.01-1.05z" />
+          </svg> Thank you for reaching out.</p>
+      </div>
     </div>
   </div>
 
