--- a/views/pet-contacts.ejs
+++ b/views/pet-contacts.ejs
@@ -31,7 +31,7 @@
                 <%= contact.name %>
               </td>
               <td>
-                <%= contact.email %>
+               <a href="mailto: <%= contact.email %> ""><%= contact.email %></a>
               </td>
               <td>
                 <%= contact.comment %>
